# ProjetoEngenharia-BancoDeDadosFluidosPerfuracao

./: README.md  README.org  scriptTransformaProjetoDoModeloAntigoParaNovo.bash  scriptTransformaProjetoDoModeloAntigoParaNovo.bash~
4-Execucao-Detalhamento-Construcao-Versao-1/: resumo_git
Codigos/: CBancodeDados.cpp  CBancodeDados.h  CConfiguracao.cpp  CConfiguracao.h  CFluidodePerfuracao.cpp  CFluidodePerfuracao.h  CHeader.cpp  CInterface.cpp  CMenu.cpp  CMenu.h  CRelatorio.h  a.out
Notebook/: Oil Exporting Countries_Peters et al 2005.xlsx  ProjetoEngenharia-Igor-BancoDadosOleos.docx  data_base.xlsx  data_base_world_oils.ipynb
Notebook/Bulldog/Beta_BullDog/: CMakeLists.txt  addOilToDatabase.cpp  addOilToDatabase.h  addoilwidget.cpp  addoilwidget.h  compareoilswidget.cpp  compareoilswidget.h  databaseconnection.cpp.cpp  databaseconnection.h  loadOils.cpp  main.cpp  mainwindow.cpp  mainwindow.h  oilibrarywidget.cpp  oilibrarywidget.h
imagens/: Diagrama_atividades.dia  Diagrama_de_caso_de_uso_geral.dia  Diagrama_execicao.dia  Diagramadecolaboração.dia  Diagramadeestado.dia  Diagramadesequencia.dia  Diagramadesequencia2.dia  uml.umbrello  uml.umbrello.xmi
listagens/: CBancodeDados.cpp  CConfiguracao.h  CHeader.h  CInterface.h  CMenu.h  CRelatorio.cpp  main.cpp
lyx/: Cap0-Introducao-Escopo-Objetivos.lyx  Cap0-Introducao-Escopo-Objetivos.lyx~  Cap1-Especificacao.lyx  Cap1-Especificacao.lyx~  Cap2-Elaboracao.lyx  Cap2-Elaboracao.lyx~  Cap3-AnaliseOrientadaAObjeto.lyx  Cap3-AnaliseOrientadaAObjeto.lyx~  Cap4-Projeto.lyx  Cap4-Projeto.lyx~  Cap6-Implementacao.lyx  (+10 more)
(+57 files in other folders)
